<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".view.LoginActivity"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/whitepure">

        <ImageView
            android:id="@+id/jaganImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="180dp"
            android:src="@mipmap/jagan"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/emblemImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/emblem" />

        <ImageView
            android:id="@+id/reddyImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="180dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/peddyreddy" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.002"
        android:background="@drawable/devider_line" />

    <TextView
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/str_admin_login"
        android:textAlignment="center"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.002"
        android:background="@drawable/devider_line" />

    <LinearLayout
        android:backgroundTint="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="25dp"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/account"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/str_userName"
            android:inputType="textEmailAddress"
            android:paddingLeft="0dp"
            android:textColor="@color/black"
            android:textColorHint="#999" />

        <EditText
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/lock"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:paddingLeft="0dp"
            android:textColor="@color/black"
            android:textColorHint="#999" />

        <Button
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/str_signin"
           />

        <Button
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:id="@+id/driverLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/str_driverlogin" />

        <TextView
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/str_forgot_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />
    </LinearLayout>


</LinearLayout>