<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".view.AdminHomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/str_adddriverdetails"
                android:textColor="@color/whitepure"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.15"
                android:foregroundGravity="right"
                android:padding="5dp"
                android:src="@drawable/ic_logout" />
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_firstName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.33"

                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/txt_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:hint="@string/str_firstname"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_middleName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.33"

                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_middlename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:hint="@string/str_middlename"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_lastName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.33"

                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:hint="@string/str_lastname"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_userName"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_cofirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/txt_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_confirmpassword"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_mobilNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_mobilenumber"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_addres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_address" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_vehicleNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_vechilnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/str_vehicleNumber" />

            </com.google.android.material.textfield.TextInputLayout>
<TextView
    android:paddingStart="5dp"
    android:text="State "
    android:textAlignment="textStart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/distSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
<LinearLayout
    android:background="@drawable/devider_line"
    android:layout_width="match_parent"
    android:layout_height="0.2dp"/>
            <TextView
                android:paddingStart="5dp"
                android:text="Division "
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/divisionSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            <LinearLayout
                android:background="@drawable/devider_line"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"/>
            <TextView
                android:paddingStart="5dp"
                android:text="Mandal "
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/mandalSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            <LinearLayout
                android:background="@drawable/devider_line"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"/>
            <TextView
                android:paddingStart="5dp"
                android:text="Village  "
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/villageSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            <LinearLayout
                android:background="@drawable/devider_line"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"/>
            <Button
                android:id="@+id/addDriverBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:text="@string/str_adddriver"
                android:textColor="@color/whitepure" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>